# niodoo-autonomous-self-correction-and-dynamic-control-loops-in-ai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  demo.sh  generate_universe_from_gguf.py  generate_universe_scalable.py  requirements.txt  universe_top60000_token_map.json
.cargo/: config.toml
docs/: LAUNCH_POST.md  REPO_MAP.md  TERMINOLOGY.md
scripts/: INSTALL.sh  chat_raw.py
src/: hopfield.rs  ipc.rs  kernels.cu  lib.rs  main.rs  memory_topology.py  model.rs  nomic_daemon.py  organism.rs  splat_engine.rs  structs.rs  structs_v2_addon.rs  visualizer.rs
src/encoder/: mod.rs  rvq_candle.rs
src/gpu/: context.rs  memory.rs  mod.rs  rips.rs  test_integration.rs
src/gpu/gpu/: context.rs  memory.rs  mod.rs  rips.rs  test_integration.rs
src/gpu/gpu/lophat/: cpu.rs  cuda.rs  mod.rs
src/gpu/kernels/: apparent_pairs.ptx  distance.ptx  distance_matrix.cu  lock_free.cu  lock_free.ptx
src/gpu/lophat/: cuda.rs  mod.rs
src/indexing/: fingerprint.rs  persistent_homology.rs  tcs.rs  text_index.rs
src/ingest/: shaper.rs
src/perceptual/: phase_locked_oscillator.rs  takens_embedding.rs
src/physics/: inverse_cube.ptx  mod.rs  naked_llama.rs  sensors.rs  websocket.rs
src/retrieval/: advanced.rs  hybrid.rs
src/token_promotion/: consensus.rs  dynamic_tokenizer.rs  engine.rs  mod.rs  pattern_discovery.rs  simulation.rs  spatial.rs
