[package]
name = "niodoo"
version = "1.0.0"
edition = "2021"

[lib]
name = "niodoo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main", features = ["cuda"] }
clap = { version = "4.6", features = ["derive", "env"] }
safetensors = "0.4.5"
half = "2.7.1"
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
friedrich = "0.5.0"
lazy_static = "1.5"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.19"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
# Included from core but used?
serde-big-array = "0.5"
rkyv = { version = "0.7", features = ["validation"] }
# nalgebra = { version = "0.32", features = ["serde-serialize"] }
rayon = "1.11"
memmap2 = "0.9"
# safetensors = "0.4" // Duplicate
# half = { version = "2.4", features = ["serde", "num-traits"] } // Duplicate

[features]
default = ["cuda"]
cuda = []

[[bin]]
name = "niodoo"
path = "src/main.rs"
